--- a/package.json
+++ b/package.json
@@ -17,15 +17,13 @@
   },
   "lint-staged": {
     "src/**/*": [
-      "yarn lint --fix",
-      "yarn test --findRealatedTests --bail"
+      "yarn lint --fix", "yarn test --findRelatedTests --bail"
     ]
   },
   "dependencies": {
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "styled-components": "^5.3.5"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.16.7",
@@ -34,10 +32,8 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
-    "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
-    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "^8.12.0",
     "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "^8.5.0",
