--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "eslint src --max-warnings=0",
     "test": "jest",
-    "test:watch": "yarn test --watch"
+    "test:watch": "yarn test --watch",
+    "storybook": "start-storybook -s ./public -p 6006",
+    "build-storybook": "build-storybook"
   },
   "husky": {
     "hooks": {
@@ -23,12 +25,20 @@
   },
   "dependencies": {
     "next": "12.1.0",
+    "next-pwa": "^5.5.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.9",
     "@babel/preset-typescript": "^7.16.7",
+    "@storybook/addon-actions": "^6.4.21",
+    "@storybook/addon-essentials": "^6.4.21",
+    "@storybook/addon-interactions": "^6.4.21",
+    "@storybook/addon-links": "^6.4.21",
+    "@storybook/react": "^6.4.21",
+    "@storybook/testing-library": "^0.0.9",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "12.1.2",
     "@types/jest": "^27.4.1",
@@ -37,6 +47,7 @@
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
+    "babel-loader": "^8.2.4",
     "babel-plugin-styled-components": "^2.0.7",
     "eslint": "^8.12.0",
     "eslint-config-next": "12.1.0",
@@ -44,8 +55,10 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
+    "eslint-plugin-storybook": "^0.5.8",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
+    "jest-styled-components": "^7.0.8",
     "lint-staged": "^12.3.7",
     "prettier": "2.6.1",
     "typescript": "^4.6.3"
