--- a/.gitignore
+++ b/.gitignore
@@ -17,13 +17,11 @@
 
 # misc
 .DS_Store
-*.pem
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
 # local env files
 .env.local
@@ -31,16 +29,9 @@ yarn-error.log*
 .env.test.local
 .env.production.local
 
-# vercel
-.vercel
+# sw stuff
+public/sw.js
+public/workbox-*.js
 
-#editorconfig
-
-.editorconfig
-
-
-#ignoring vscode configs
-
-.vscode
-
-package-lock.json
+# storybook
+storybook-static
