--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "boilerplate",
-  "version": "0.1.0",
+  "name": "react-avancado-boilerplate",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint src --max-warnings=0",
-    "test": "jest",
-    "test:watch": "yarn test --watch",
-    "storybook": "start-storybook -s ./public -p 6006",
-    "build-storybook": "build-storybook"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "test": "jest --maxWorkers=50%",
+    "test:watch": "jest --watch --maxWorkers=25%",
+    "test:ci": "jest --runInBand",
+    "generate": "yarn plop --plopfile generators/plopfile.js",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
+    "postinstall": "husky install",
+    "prepare": "husky install"
   },
   "lint-staged": {
     "src/**/*": [
@@ -24,43 +23,39 @@
     ]
   },
   "dependencies": {
-    "next": "12.1.0",
-    "next-pwa": "^5.5.0",
+    "next": "12.0.10",
+    "next-pwa": "^5.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.5"
+    "styled-components": "5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.9",
-    "@babel/preset-typescript": "^7.16.7",
-    "@storybook/addon-actions": "^6.4.21",
-    "@storybook/addon-essentials": "^6.4.21",
-    "@storybook/addon-interactions": "^6.4.21",
-    "@storybook/addon-links": "^6.4.21",
-    "@storybook/react": "^6.4.21",
-    "@storybook/testing-library": "^0.0.9",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "12.1.2",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.23",
-    "@types/react": "^17.0.43",
-    "@types/styled-components": "^5.1.25",
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "@typescript-eslint/parser": "^5.17.0",
-    "babel-loader": "^8.2.4",
-    "babel-plugin-styled-components": "^2.0.7",
-    "eslint": "^8.12.0",
-    "eslint-config-next": "12.1.0",
-    "eslint-config-prettier": "^8.5.0",
+    "@storybook/addon-essentials": "6.4.17",
+    "@storybook/builder-webpack5": "^6.4.17",
+    "@storybook/manager-webpack5": "^6.4.17",
+    "@storybook/react": "6.4.17",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.2",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.14",
+    "@types/react": "^17.0.27",
+    "@types/styled-components": "^5.1.21",
+    "@typescript-eslint/eslint-plugin": "5.10.2",
+    "@typescript-eslint/parser": "5.10.2",
+    "eslint": "^8.8.0",
+    "eslint-config-next": "^12.0.10",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.4.0",
-    "eslint-plugin-storybook": "^0.5.8",
-    "husky": "^7.0.4",
-    "jest": "^27.5.1",
-    "jest-styled-components": "^7.0.8",
-    "lint-staged": "^12.3.7",
-    "prettier": "2.6.1",
-    "typescript": "^4.6.3"
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^7.0.2",
+    "jest": "^27.4.7",
+    "jest-styled-components": "^7.0.5",
+    "lint-staged": "^12.3.3",
+    "plop": "^3.0.5",
+    "prettier": "^2.4.1",
+    "storybook-addon-next-router": "^3.0.8",
+    "typescript": "^4.5.5",
+    "webpack": "5.68.0"
   }
 }
