--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,18 +4,18 @@
   "icons": [
     {
       "src": "/img/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "sizes": "192x192"
     },
     {
       "src": "/img/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
-  "theme_color": "#06092B",
   "background_color": "#06092B",
-  "start_url": "/",
+  "description": "Boilerplate utilizando Typescript, React, NextJS e Styled Components!",
   "display": "fullscreen",
-  "orientation": "portrait"
+  "start_url": "/",
+  "theme_color": "#06092B"
 }
